Added basic scorecard

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
+
+            <div class="scorecard">
+                <h4>You: <span id="user-scorecard"></span></h4>
+                <h4>Computer: <span id="comp-scorecard"></span></h4>
+            </div>
             </div>
             
         </div>
